--- a/.env
+++ b/.env
@@ -1,16 +1,16 @@
-SESSION_ID="INCONNU~XD~"
-AUTO_READ_STATUS=true
+SESSION_ID="INCONNU~XD~8AInBA7a#N5mPUQcVDDAPUV2KaJfUIJ_cU0uaAT-FWnH2R8ZPCgI"
+AUTO_READ_STATUS=false
 STATUS_READ_MSG="*Status Seen By INCONNU-XD ⚡*"
 AUTO_STATUS_REPLY=false
 AUTO_REJECT_CALLS=false
-MODE="public"
+MODE="private"
 WELCOME=false
 AUTO_READ_MESSAGES=false
 AUTO_TYPING=false
-OWNER_NAME="INCONNU BOY"
-OWNER_NUMBER="554488138425"
+OWNER_NAME="𝐃𝚯𝚴 𝐉𝐔𝚴𝚰𝚯𝚪𓆪"
+OWNER_NUMBER="50935735875"
 AUTO_RECORDING=false
 ALWAYS_ONLINE=false
 AUTO_BLOCK=true
 AUTO_REACT=false
-PREFIX="."
+PREFIX="♧"
